[package]
name = "dbquota"
version = "0.1.0"
authors = ["nbari <nbari@tequila.io>"]
description = "enforces database quotas by toggling a read-only status"
documentation = "https://github.com/nbari/dbquota/blob/master/README.md"
homepage = "https://github.com/nbari/dbquota"
repository = "https://github.com/nbari/dbquota"
readme = "README.md"
keywords = ["mysql", "mariadb", "quota", "database", "size"]
categories = ["command-line-utilities", "command-line-interface"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
clap = "2"
mysql = "16.0"
